--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Jonathan King
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
-
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
-# Flags below are optional
-#
-
+description: NZ Game Dev, AI enthusiast, and Engineering student.
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
@@ -76,11 +68,10 @@ sass:
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-  - jemoji # Enables emojis
+  - jekyll-jemoji # Enables emojis
 
 # Exclude these files from your production _site
 exclude:
-  - Gemfile
   - Gemfile.lock
   - LICENSE
   - README.md
