--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jonathan King
 
 # Short bio or description (displayed in the header)
-description: NZ Game Dev, AI enthusiast, and Engineering student.
+description: Software student and indie dev
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
