--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ name: Jonathan King
 
 # Short bio or description (displayed in the header)
 description: Software student and indie dev
+
+avatar: https://raw.githubusercontent.com/JonathanKing01/jonathanking01.github.io/master/images/DonaldDuckFace.png
+
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
