--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ name: Jonathan King
 # Short bio or description (displayed in the header)
 description: Software student and indie dev
 
+# Avatar to go with name and description
 avatar: https://raw.githubusercontent.com/JonathanKing01/jonathanking01.github.io/master/images/DonaldDuckFace.png
 
 # Includes an icon in the footer for each username you enter
